[gd_scene load_steps=6 format=3 uid="uid://bity7i4wextii"]

[ext_resource type="Script" path="res://Scripts/level_transition.gd" id="1_aln26"]
[ext_resource type="Texture2D" uid="uid://chl50k4h7naok" path="res://Menu/main_menu_background_01.png" id="2_km6lj"]
[ext_resource type="FontFile" uid="uid://xjx5w8bn4bbg" path="res://Themes/Fonts/oxanium/Oxanium-Light.ttf" id="2_twvqx"]

[sub_resource type="Animation" id="Animation_bbsuw"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufp3i"]
_data = {
"FadeIn": SubResource("Animation_bbsuw")
}

[node name="Level_Transition" type="Node2D"]
script = ExtResource("1_aln26")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_km6lj")
expand_mode = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_twvqx")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Loading...[/center]"

[node name="ColorRect_FadeIn" type="ColorRect" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 0)
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer_FadeIn" type="AnimationPlayer" parent="CanvasLayer/ColorRect_FadeIn"]
libraries = {
"": SubResource("AnimationLibrary_ufp3i")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
